# Festnesis

./: .gitignore  CMakeLists.txt  README.md
include/common/: helper_types.hpp
include/cpu/: m68000.hpp  m68000_addressing.hpp  m68000_regs.hpp
src/: CMakeLists.txt  main.cpp
src/cpu/: m68000.cpp
